// Vitest Snapshot v1

exports[`Textarea > Textarea baseVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <t-textarea
    name="description"
    placeholder="请输入描述文案"
  />
  <t-textarea
    autosize="true"
    name="description"
    placeholder="请输入文案，高度可自适应；autosize=true"
  />
  <t-textarea
    autosize="[object Object]"
    name="description"
    placeholder="请输入文案，高度可自适应，最小3行，最大5行；autosize={minRows: 3, maxRows: 5}"
  />
</div>
`;

exports[`Textarea > Textarea eventsVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <t-textarea
    placeholder="请输入"
  />
</div>
`;

exports[`Textarea > Textarea maxlengthVue demo works fine 1`] = `
<div>
  <t-textarea
    maxlength="20"
    placeholder="请输入描述文案，文本长度最多20，maxlength=20"
  />
  <br />
  <t-textarea
    maxcharacter="20"
    placeholder="请输入描述文案，最多20字符（一个汉字占两个字符长度），maxcharacter=20"
  />
</div>
`;

exports[`Textarea > Textarea typeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <t-textarea
    default-value="禁用状态"
    disabled=""
  />
  <t-textarea
    default-value="只读状态"
    readonly=""
  />
  <t-textarea
    default-value="普通状态"
    tips="这是普通文本提示"
  />
  <t-textarea
    default-value="成功状态"
    status="success"
    tips="校验通过文本提示"
  />
  <t-textarea
    default-value="警告状态"
    status="warning"
    tips="校验不通过文本提示"
  />
  <t-textarea
    default-value="错误状态"
    status="error"
    tips="校验存在严重问题文本提示"
  />
</div>
`;
